--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,11 @@
-<% provide(:title, "Home") %>
+<% provide(:title, "About") %>
 <!DOCTYPE html>
 <html>
 	<head>
 		<title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
 	</head>
 	<body>
-		<h1>StaticPages#home</h1>
-		<p>Find me in app/views/static_pages/home.html.erb</p>
+		<h1>StaticPages#about</h1>
+		<p>Find me in app/views/static_pages/about.html.erb</p>
 	</body>
 </html>
